--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,26 +8,211 @@
     <link rel="stylesheet" href="Style.Css">
     <title>nswebsite</title>
 </head>
+
 <body>
     <section class="container">
-        <div class="item-1">block1</div>
-        <div class="item-2">block2</div>
-        <div class="item-3">block3</div>
-        <div class="item-4">block4</div>
-        <div class="item-5">block5</div>
-        <div class="item-6">block6</div>
-        <div class="item-7">block7</div>
-        <div class="item-8">block8</div>
-        <div class="item-9">block9</div>
-        <div class="item-10">block10</div>
-        <div class="item-13">block13</div>
-        <div class="item-14">block14</div>
-        <div class="item-15">block15</div>
-        <div class="item-16">block16</div>
-        <div class="item-17">block17</div>
-        <div class="item-18">block18</div>
+        <div class="item-1">
+            <ul>
+                <li>
+                   logo 
+                </li>
+                <li>Menu</li>
+                <li>zoeken</li>
+                <li>MijnNS</li>
+                <li>English</li>
+            </ul>
+        </div>
+        <div class="item-2">
+            <svg class="heroflow__overlay-svg" preserveAspectRatio="xMinYMin meet" xmlns="http://www.w3.org/200/svg"
+                viewBox="0 0 767 423">
+                <defs>
+                    <style>
+                        .cls-1 {
+                            fill: none;
+                        }
+
+                        .cls-2 {
+                            clip-path: url(#clip-path);
+                        }
+
+                        .cls-3 {
+                            fill: url(#linear-gradient);
+                        }
+                    </style>
+                    <clipPath id="clip-path" transform="translate(-0.331)">
+                        <path class="cls-1"
+                            d="M0,423.5H4.523c111.477,0,212.584-43.107,289.315-119.838L477.662,119.838C554.393,43.107,655.954,0,766.977,0H0Z">
+                        </path>
+                    </clipPath>
+                    <linearGradient id="linear-gradient" y1="211.5" x2="767" y2="211.5" gradientUnits="userSpaceOnUse">
+                        <stop class="heroflow__overlay-start" offset="0" stop-color="currentColor"></stop>
+                        <stop class="heroflow__overlay-stop" offset="1" stop-color="currentColor"></stop>
+                    </linearGradient>
+                </defs>
+                <g class="cls-2">
+                    <rect class="cls-3" width="680" height="180"></rect>
+                </g>
+            </svg>
+
+        </div>
+        <div class="item-3">
+            <p>
+                plan uw reis
+            </p>
+
+            <button class="button1">van</button> <button class="button2">naar</button>
+        </div>
+        <div class="item-4">
+            <p>Producten</p>
+            <ul>
+                Online een kaartje kopen
+                Abonnementen
+                Spoordeelwinkel: Trein + Uitje
+                OV-fiets & meer
+                Voordelig dagje uit
+                Internationale treinkaartjes
+            </ul>
+        </div>
+        <div class="item-5">
+            <p>klantenservice</p>
+            <ul>
+                Vergeten uit te checken
+                Geld terug bij vertraging
+                Samenreiskorting
+                Abonnement wijzigen
+                De OV-fiets en fietsenstallingen
+            </ul>
+        </div>
+        <div class="item-6">
+            <p>speciaal voor</p>
+            <ul>
+                Zakelijke reizigers en bedrijven
+
+                Studenten
+
+                60-plussers
+
+                Reizigers met een functiebeperking
+
+                Werken bij NS
+            </ul>
+        </div>
+        <div class="item-7">
+            <p>
+                Onze suggesties
+            </p>
+        </div>
+        <div class="item-8">
+               
+            <p>
+                NS Extra
+                Profiteer gratis van de handige check-uit
+                alert service en andere voordelen.
+                Meld je gratis aan
+            </p>
+        </div>
+        <div class="item-9">
+            <p>
+                Klaar met studeren?
+                krijg een dal voordeel
+                cadeau!
+            </p>
+            <button>Bekijk de actie </button>
+        </div>
+        <div class="item-10">
+            <p>Veelgezocht</p>
+            <ul>
+                NS Flex
+                Valse e-mails herkennen
+                Reizen met een OV-chipkaart
+                Klassewissel
+                Couponcode inwisselen
+            </ul>
+        </div>
+        <div class="item-11">
+            <p>
+             De NS app.je eigen reisplanner naar elk adres.
+             Bekijk alle mogelijkheden van de app.
+            </p>
+        </div>
+        <div class="item-12">
+            <p>
+                Per maand kiezen of je met korting reist? Bestel NS Flex!
+            </p>
+            <button>ja,ik wil NS flex</button>
+        </div>
+
+        <div class="item-13">
+            <p>
+                Dagje uit
+            </p>
+        </div>
+        <div class="item-14">
+            <p>
+                Een nachtje
+                 weg naar jouw
+                  favoriete stad in 
+                  Nederland
+            </p>
+            <button>Bekijk onze tips</button>
+        
+
+        </div>
+        <div class="item-15">
+            <p>
+                Spoordeelwinkel
+                Trein + Bus + Keukenhof
+                Geniet van de bloemenpracht
+                in Keukenhof.open vanaf 21 maart.
+            </p>
+        </div>
+        <div class="item-16">
+            <p>
+                Helderse Duinen
+                van station Den Helder Zuid naar station
+                 Den Helder
+            </p>
+        </div>
+        <div class="item-17">
+            <p>
+                Gein en Vecht
+                van station Abcoude naar station Weesp
+            </p>
+        </div>
+        <div class="item-18">
+            <p>
+                Kickenbecker seen
+                van station Kalderkirchen naar station
+                Venlo
+            </p>
+        </div>
+        <div class="item-19">
+            <p>
+                Blauwe Kamer Rhenen
+                Rondwandeling vanaf station Rhenen
+            </p>
+        </div>
+        <div class="item-20">
+            <ul>
+                <li>Direct naar</li>
+                <li>Onze producten</li>
+                <li>Meer NS</li>
+                <li>Sociale media</li>
+            </ul>
+        </div>
+        <div class="item-21">
+            <ul>
+                <li>Disclaimer</li>
+                <li>Privacy</li>
+                <li>Cookies</li>
+                <li>Bedrijfsinformatie</li>
+                <li>Voorwaarden en folders</li>
+                <li>logo</li>
+            </ul>
+        </div>
 
 
     </section>
 </body>
+
 </html>
