--- a/index.html
+++ b/index.html
@@ -14,16 +14,17 @@
         <div class="item-1">
             <ul>
                 <li>
-                   logo 
+                   <img src="https://www.ns.nl/static/generic/2.44.0/images/nslogo.svg"alt="logo">
                 </li>
                 <li>Menu</li>
                 <li>zoeken</li>
                 <li>MijnNS</li>
-                <li>English</li>
+                <li>
+                    English</li>
             </ul>
         </div>
         <div class="item-2">
-            <svg class="heroflow__overlay-svg" preserveAspectRatio="xMinYMin meet" xmlns="http://www.w3.org/200/svg"
+            <!-- <svg class="heroflow__overlay-svg" preserveAspectRatio="xMinYMin meet" xmlns="http://www.w3.org/200/svg"
                 viewBox="0 0 767 423">
                 <defs>
                     <style>
@@ -52,7 +53,8 @@
                 <g class="cls-2">
                     <rect class="cls-3" width="680" height="180"></rect>
                 </g>
-            </svg>
+            </svg> -->
+            <img class="photo" src="https://www.ns.nl/binaries/_ht_1552988142912/large/content/gallery/ns-nl/carrousel-hero-afbeeldingen/ns_boekenweek_website_1920x1280_schoon-px.jpg"alt="photo">
 
         </div>
         <div class="item-3">
@@ -103,6 +105,7 @@
             </p>
         </div>
         <div class="item-8">
+            <img class="photo2" src="https://www.ns.nl/binaries/_ht_1550581102907/tegel/content/gallery/ns-nl/thema-hero-afbeeldingen/ns-extra/afdelingbeeld.nl_maaike-poelen_ns-extra_06_hr.jpg"alt="photo2">
                
             <p>
                 NS Extra
@@ -130,6 +133,7 @@
             </ul>
         </div>
         <div class="item-11">
+            <img class="photo66" src="https://www.ns.nl/binaries/_ht_1552555722940/tegel/content/gallery/ns-nl/thema-hero-afbeeldingen/ns-app-campagne.jpg"alt="photo66">
             <p>
              De NS app.je eigen reisplanner naar elk adres.
              Bekijk alle mogelijkheden van de app.
@@ -159,6 +163,7 @@
 
         </div>
         <div class="item-15">
+            <img class="photo10" src="https://www.ns.nl/binaries/_ht_1551088554379/tegel/content/gallery/ns-nl/prijsbanner-afbeeldingen/spoordeelwinkel/keukenhof-lisse-hero.jpg"alt="photo10">
             <p>
                 Spoordeelwinkel
                 Trein + Bus + Keukenhof
@@ -167,6 +172,7 @@
             </p>
         </div>
         <div class="item-16">
+            <img class="photo55" src="https://www.ns.nl/binaries/_ht_1551787668809/tegel/content/gallery/ns-nl/dagjeuit-hero-afbeeldingen/wandelingen/fort-erfprins-tussen-huisduinen-en-den-helder.jpg"alt="photo55">
             <p>
                 Helderse Duinen
                 van station Den Helder Zuid naar station
@@ -174,12 +180,14 @@
             </p>
         </div>
         <div class="item-17">
+            <img class="photo11" src="https://www.ns.nl/binaries/_ht_1553090496403/tegel/content/gallery/ns-nl/dagjeuit-hero-afbeeldingen/wandelingen/ns-wandeling-gein-en-vecht.jpg"alt="photo11">
             <p>
                 Gein en Vecht
                 van station Abcoude naar station Weesp
             </p>
         </div>
         <div class="item-18">
+            <img class="photo22" src="https://www.ns.nl/binaries/_ht_1553092773947/tegel/content/gallery/ns-nl/dagjeuit-hero-afbeeldingen/wandelingen/voetbrug-met-wandelaars-over-de-nette-ten-o.-van-leuth-5.jpg"alt="photo22">
             <p>
                 Kickenbecker seen
                 van station Kalderkirchen naar station
@@ -187,6 +195,7 @@
             </p>
         </div>
         <div class="item-19">
+            <img class="photo33" src="https://www.ns.nl/binaries/_ht_1553095197886/tegel/content/gallery/ns-nl/dagjeuit-hero-afbeeldingen/wandelingen/omgeving-rhenen-uitkijkpunt-blauwe-kamer.jpg"alt="photo33">
             <p>
                 Blauwe Kamer Rhenen
                 Rondwandeling vanaf station Rhenen
@@ -207,7 +216,9 @@
                 <li>Cookies</li>
                 <li>Bedrijfsinformatie</li>
                 <li>Voorwaarden en folders</li>
-                <li>logo</li>
+                <li>
+                    <img class="photo44" src="https://www.ns.nl/static/generic/2.44.0/images/nslogo.svg"alt="photo44">
+                </li>
             </ul>
         </div>
 
