--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 NS Extra
                 Profiteer gratis van de handige check-uit
                 alert service en andere voordelen.
-                Meld je gratis aan
+                Meld je gratis aan.
             </p>
         </div>
         <div class="item-9">
